@@ -13,6 +13,10 @@
     <sect3>
       <title>Backup original file</title>
 
+      <indexterm>
+        <primary>Backup files</primary>
+      </indexterm>
+
       <para>When this option is enabled backup copy is created before saving
       the file. Filename for backup file is generated by replacing filename
       extension with <filename class="extension">BAK</filename>.</para>
@@ -33,22 +37,21 @@
     <sect3>
       <title>Disable splash screen</title>
 
+      <indexterm>
+        <primary>Disabling splash screen</primary>
+      </indexterm>
+
       <para>User can disable splash screen appearing when WinMerge is started.
       It does not make WinMerge start faster (splash screen can be missed by
       clicking it with mouse) but it saves one click.</para>
     </sect3>
 
     <sect3>
-      <title>Close compare statepane automatically</title>
-
-      <para>User can allow WinMerge to close compare statepane automatically
-      after directory compare is ready. After compare statuspane is closed it
-      can be reopened from <guimenu>View</guimenu>-menu (<guimenuitem>Compare
-      Statepane</guimenuitem>).</para>
-    </sect3>
-
-    <sect3>
       <title>Close Windows with <keycap>ESC</keycap></title>
+
+      <indexterm>
+        <primary>Esc key, closing windows</primary>
+      </indexterm>
 
       <para>If this option is enabled, WinMerge closes document windows and
       application with <keycap>ESC</keycap> key. One window is closed with one
@@ -75,11 +78,36 @@
     <sect3>
       <title>Allow only one instance to run</title>
 
+      <indexterm>
+        <primary>Single-instance</primary>
+      </indexterm>
+
       <para>Limits WinMerge program instances to one. If new instance is tried
       to start, old instance is activated instead. If new instance is tried to
       open with paths, new paths replace existing ones in previous instance.
       Or, if multiple compare window support is enabled new compare windows
       are opened for new paths. (See below.)</para>
+    </sect3>
+
+    <sect3>
+      <title>Open-dialog Auto-Completion</title>
+
+      <para>This option allows user to enable auto-completion for Open-dialog
+      paths. There are two modes for auto-completion:</para>
+
+      <itemizedlist>
+        <listitem>
+          <para>From file system - checks paths from filesystem. I.e. It
+          locates paths matching letters already typed and if matching path is
+          found, completes the path.</para>
+        </listitem>
+
+        <listitem>
+          <para>From MRU list - checks paths only from MRU list. This is handy
+          when you have pretty limited set of paths (usually in MRU lists) to
+          compare.</para>
+        </listitem>
+      </itemizedlist>
     </sect3>
 
     <sect3>
@@ -142,6 +170,10 @@
 
     <sect3>
       <title>Whitespace</title>
+
+      <indexterm>
+        <primary>Ignore whitespace characters</primary>
+      </indexterm>
 
       <para><guilabel>Compare Whitespace</guilabel>, <guilabel>Ignore
       whitespace change</guilabel> and <guilabel>Ignore all
@@ -228,7 +260,7 @@
 
         <listitem>
           <para><guilabel>Quick Contents</guilabel> - slimmed down comparison
-          of files by content. This method uses streamlines file comparison
+          of files by content. This method uses streamlined file comparison
           code which skips plugins and moved block detection. The only
           advantage of this method over Full Contents is that this method does
           not load the files into method, and so is faster.</para>
@@ -257,8 +289,8 @@
         Contents</guilabel> -compare method is selected.</para>
       </note>
 
-      <para><emphasis></emphasis>This option allows to optimize compare by not
-      looking whole files, but only until first difference is found.</para>
+      <para>This option allows to optimize compare by not looking whole files,
+      but only until first difference is found.</para>
 
       <para>Drawback is WinMerge may be unable to recognize binary files as
       such. This is even likely if first difference is in begin of file. Don't
@@ -294,6 +326,10 @@
 
     <sect3>
       <title>Automatic rescan</title>
+
+      <indexterm>
+        <primary>Automatic rescan</primary>
+      </indexterm>
 
       <para>Enabling automatic rescanning forces WinMerge to rescan after
       every change done to files, including typing. That's how WinMerge 1.7.1
@@ -375,13 +411,47 @@ EOL differences.</screen>
     <sect3>
       <title>Line Difference Coloring</title>
 
-      <para>This option controls coloring of differences inside lines.
-      Normally (<guilabel>Break at whitespace</guilabel> selected) finding
-      differences stops at whitespace characters. This basically means whole
-      words are highlighted.</para>
+      <indexterm>
+        <primary>Highlighting line differences</primary>
+      </indexterm>
 
-      <para>But if <guilabel>Break at whitespace or punctuation</guilabel> is
-      selected difference finding stops at punctuation characters as well.
+      <para>WinMerge can highlight exact differences in different lines. This
+      behaviour is controlled by these options First checkbox <guilabel>View
+      Line Differences</guilabel> controls if highlighting is enabled or
+      disabled.</para>
+
+      <para>Next two choices are about level of highlighting. Best choise
+      usually depends on filetypes compared.</para>
+
+      <itemizedlist>
+        <listitem>
+          <para><guilabel>Character level</guilabel> - this level tries to
+          find exact characters that are different. This is especially useful
+          when working with fileformats that do not have clear word-breaks.
+          This level is capable to highlight single changed character in
+          middle of word. It may save a lot of time when trying to find those
+          single-character differences.</para>
+        </listitem>
+
+        <listitem>
+          <para><guilabel>Word-level</guilabel> - this is what WinMerge
+          version 2.4 and earlier had. It tries to find different words to
+          highlight. There is exra value in selecting whole words - usually it
+          is easy to select words in editor so copy/paste is easier when words
+          are selected. This is also case with WinMerge editor. You can for
+          example select word in editor by double-clicking it with the
+          mouse.</para>
+        </listitem>
+      </itemizedlist>
+
+      <para><guilabel>Word-level</guilabel> highlighting has one additional
+      option. Dropdown control below it controls how word-breaks are detected.
+      Normally (<guilabel>Break at whitespace</guilabel> selected) words are
+      assumed to be separated by whitespace characters. This is what we have
+      in normal text.</para>
+
+      <para>When <guilabel>Break at whitespace or punctuation</guilabel> is
+      selected, also punctuation characters are considered as word-breaks.
       When this is selected WinMerge can better handle comma separated lists
       etc. For example, for lines:</para>
 
@@ -434,6 +504,10 @@ EOL differences.</screen>
     <sect3>
       <title>External editor</title>
 
+      <indexterm>
+        <primary>Configuring external editor</primary>
+      </indexterm>
+
       <para>WinMerge has a pretty good editor for most basic editing needs.
       However, it doesn't even compare to many other editors in functionality.
       WinMerge allows user to define one's personally preferred editor to
@@ -449,6 +523,19 @@ EOL differences.</screen>
         <option>-option1</option> <option>-option2</option>
         <option><replaceable>...</replaceable></option></para>
       </tip>
+    </sect3>
+
+    <sect3>
+      <title>Filter Folder</title>
+
+      <indexterm>
+        <primary>Selecting filter file folder</primary>
+      </indexterm>
+
+      <para>This option allows user to select own (private) folder for file
+      filters. By default this folder is user's My Documents folder. When new
+      private file filter is created, it is automatically added to this
+      folder.</para>
     </sect3>
   </sect2>
 
